solved text overflow issue

--- a/styles.css
+++ b/styles.css
@@ -11,11 +11,12 @@ p {
     margin: 0;
 }
 .main-section{
-    width: 225px;
-    height: 330px;
+    width: 215px;
+    height: 300px;
     position: relative;
-    padding-right: 0.5em;
-    padding-left: 0.5em;
+    /* padding-right: 0.5em;
+    padding-left: 0.5em; */
+    border-radius: 15px;
     overflow: hidden;
 }
 .main-section img {
@@ -23,8 +24,20 @@ p {
     height: 100%;
     object-fit: fill;
     /* vertical-align: bottom; */
-    border-radius: 15px;
     background-color: black;
+}
+.photo-overlay{
+    width: 215px;
+    height: 300px;
+    object-fit: fill;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.6);
+    opacity: 0;
+    transition: opacity 0.3s linear;
 }
 .save-btn {
     background-color: red;
@@ -35,6 +48,7 @@ p {
     right: 1em;
     color: white;
     transition: all 0.4s linear;
+    cursor: pointer;
 }
 .btm-icon-wrapper{
     position: absolute;
@@ -46,27 +60,30 @@ p {
     transition: all 0.4s linear;
 }
 .width-wrap{
-    width: 58.33%;
+    width: 50%;
     max-width: 100%;
     margin-left: 0.25em;
     margin-right: 0.25em;
 }
 .width-wrap2{
-    width: 20%;
+    width: 25%;
     max-width: 100%;
     margin-left: 0.25em;
     margin-right: 0.25em;
 }
 .img-info-tab{
     display: flex;
+    justify-items: center;
     background-color: #eaeaeb;
     border-radius: 20px;
     padding: 8px 10px;
+    cursor: pointer;
 }
 .img-info-tab i {
     margin-right: 4px;
 }
-.img-info-tab div {
+.text-overflow {
+    overflow: hidden;
     text-overflow: ellipsis;
 }
 .upload-icon{
@@ -78,6 +95,7 @@ p {
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 }
 .upload-icon i {
     position: absolute;
@@ -88,3 +106,9 @@ p {
 .main-section:hover .btm-icon-wrapper{
     transform:translateY(-4.5em);
 }
+.main-section:hover .photo-overlay {
+    opacity: 1;
+}
+
+
+
